# RayTracing

./: CMakeLists.txt  README
Planung/: test foramt
Planung/Allgemein/: Render Engine.pptx
Planung/Diagramme/: Beispiel Methodenablaufdiagramm
Planung/Python_to_cplus/: Blender implemention.pptx  Scene_dict.py
Planung/Word Presets/: Allgemeinere Voraussetzung.docx  Klasse.docx  Klasse.odt  Prozess.docx  Rechercheprotokol Klassen.docx  Rechercheprotokol Klassen.mht  Rechercheprotokol Methoden.docx  Rechercheprotokol Prozesse.docx
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Shape.hpp  geometry.hpp  include.h  main.cpp  scene.h  scene.hpp  test.cpp  transform.cpp  transform.hpp  utility.hpp
src/core/Python Warpper/: Python_types.cpp  Python_types.hpp  main_python.cpp
src/python/: CMakeLists.txt  Export_mesh.py  Scene_types.py  __init__.py  engine.py  test.py
src/python/Shapes/: CMakeLists.txt  Triangle.py
